# NightPi

./: .gitignore  Cargo.toml  LICENSE  Makefile.toml  README.md
.github/workflows/: ci.yml
.makefile/: deploy.sh
assets/js/: bootstrap.bundle.min.js
nightpi/: Cargo.toml
nightpi-server/: Cargo.toml  Makefile.toml
nightpi-wasm/: .gitignore  Cargo.toml  Makefile.toml
nightpi-wasm/src/: lib.rs
src/: assets.rs  config.rs  main.rs  root.rs
src/system/: mod.rs
src/web/: api.rs  mod.rs  pages.rs  templates.rs
templates/: base.html  index.html  navbar.html  settings.html
wasm/: Cargo.toml
wasm/src/: jquery.rs  lib.rs
