[package]
name = "nightpi"
version = "0.1.0"
authors = ["Thomas Laroche <tho.laroche@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["macros"] }
warp = "0.2"

[workspace]
members = [
    "wasm"
]

[profile.release.package.nightpi-wasm]
# Tell `rustc` to optimize for small code size.
opt-level = "s"