[package]
name = "nightpi"
version = "0.1.0"
authors = ["Thomas Laroche <tho.laroche@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["macros"] }
warp = "0.2"
rust-embed = { version = "5.5.1", features = ["debug-embed", "interpolate-folder-path"] }
mime_guess = "2.0"
structopt = { version = "0.3", default-features = false }
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"

[workspace]
members = [
    "wasm"
]

[profile.release.package.nightpi-wasm]
# Tell `rustc` to optimize for small code size.
opt-level = "s"