[package]
name = "nightpi-wasm"
version = "0.1.0"
authors = ["Thomas Laroche <tho.laroche@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.63"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console", "DomTokenList", "Element", "Location", "Window"] }
wee_alloc = "0.4.5"
reqwest = "0.10"